# hacker_tui_sim

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
screens/: dashboard.yaml
screens/dashboard/: providers.yaml  screen.yaml
screens/dashboard/modals/: debug.yaml  help.yaml
screens/dashboard/providers/: phase8.yaml
screens/dashboard/tabs/: analysis.yaml  forensics.yaml  hacker.yaml  logs.yaml  overview.yaml  visuals.yaml
src/hatui/: __init__.py  __main__.py  app.py  demo_assets.py
src/hatui/core/: __init__.py  actions.py  context.py  input_manager.py  screen_buffer.py  style.py  terminal_env.py  widget.py
src/hatui/demo/: __init__.py
src/hatui/providers/: __init__.py  base.py  builtins.py  helpers.py
src/hatui/runtime/: __init__.py  action_registry.py  bindings.py  bootstrap.py  cli.py  defaults.py  engine.py  formatters.py  loader.py  provider_manager.py  registries.py  render_policy.py  router.py  store.py  validation.py  watcher.py
src/hatui/widgets/: __init__.py  alert_stack_widget.py  alert_widget.py  banner_widget.py  border_widget.py  box_widget.py  center_widget.py  chart_widget.py  code_block_widget.py  column_widget.py  diff_viewer_widget.py  divider_widget.py  event_feed_widget.py  flow_widget.py  gauge_widget.py  heatmap_widget.py  hex_dump_widget.py  histogram_widget.py  inspector_widget.py  kv_inspector_widget.py  label_widget.py  list_widget.py  log_widget.py  menu_widget.py  metric_grid_widget.py  mini_chart_widget.py  (+20 more)
tools/: generate_changelog.py
(+6 files in other folders)
